2006-08-29  Sven Neumann  <sven@gimp.org>

	* libgimpbase/Makefile.am
	* libgimpbase/gimpbase.h
	* libgimpbase/gimprectangle.[ch]: added new files that hold
	gimp_rectangle_intersect(), factored out of the core.

	* libgimpbase/gimpbase.def: updated.

	* app/core/gimp-edit.c
	* app/core/gimp-utils.c
	* app/core/gimp-utils.h
	* app/core/gimpchannel-combine.c
	* app/core/gimpdrawable-foreground-extract.c
	* app/core/gimpdrawable-transform.c
	* app/core/gimpdrawable.c
	* app/core/gimpimage-preview.c
	* app/core/gimplayer.c
	* app/core/gimpscanconvert.c
	* app/display/gimpdisplayshell-draw.c: changed includes accordingly.

	* libgimp/gimpdrawablepreview.c: don't duplicate
	gimp_rectangle_intersect() here, use the function in libgimpbase.

	* app/base/siox.c: use gimp_rectangle_intersect() to reduce the
	working area to the region of interest. Fixes bug #340422.

2006-08-29  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/postscript.c (dither_grey): code cleanup and fix
	for bug #353381 (crash when Preview option is selected).

2006-08-29  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/common/dog.c (query): Removed incorrect mention of
	Gauss IIR in blurb (the plug-in uses the RLE algorithm).

2006-08-29  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimpplugin.c (gimp_plug_in_recv_message): use
	gimp_message() if a plug-in crashes.

2006-08-29  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-duplicate.c (gimp_image_duplicate)
	* app/widgets/gimpfiledialog.c (gimp_file_dialog_set_image): a
	somewhat hackish implementation of what's suggested in bug #353246.
	Let the save dialog default to the folder of the duplicated image.

2006-08-29  Sven Neumann  <sven@gimp.org>

	* app/display/gimpnavigationeditor.c: some adjustments to the fix
	for bug #346880.

2006-08-28  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontainerview.[ch]: made set_context() a
	virtual function of the GimpContainerView interface.

2006-08-28  Sven Neumann  <sven@gimp.org>
